# so101_ros2

./: .gitignore  HANDOFF_PROMPT.md  README.md  camera_config.env  camera_info.yaml  camera_stream_publisher.py  launch_ik_services.sh  launch_ik_services_v2.sh  link_pose_publisher.py  link_poses.rviz  move_to_ik.py  slider_to_arm.py  start_all_services.sh  visualize_all.sh
src/so101_description/: CMakeLists.txt  README.md  package.xml
src/so101_description/launch/: display.launch.py
src/so101_description/resource/: so101_description
src/so101_description/urdf/: so101_new_calib.urdf
src/so101_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/so101_moveit_config/config/: kinematics.yaml  moveit.rviz  moveit_controllers.yaml  pilz_cartesian_limits.yaml  ros2_controllers.yaml
src/so101_moveit_config/scripts/: ik_fk_services.py
src/so101_moveit_config_ik_approx/: CMakeLists.txt  package.xml
src/so101_moveit_config_ik_approx/config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  so101_new_calib.srdf  so101_new_calib.urdf.xacro
src/so101_moveit_config_ik_approx/scripts/: ik_fk_services_approx.py
