<?xml version="1.0"?>
<package format="3">
  <name>so101_description</name>
  <version>0.1.0</version>
  <description>SO-101 robot description package with URDF, meshes, and launch files.</description>
  <maintainer email="rajpcrj@users.noreply.github.com">SO-101 Maintainer</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
